@@ -9,7 +9,8 @@ collections.
 
 ### Added
 
-- Remember collection open/closed state after closing the site.
+- Remember collection open/closed state.
+- Remember last selected item.
 
 ### Fixed
 
